# poetry-export-bug

package1/: pyproject.toml
package2/: pyproject.toml
package3/: pyproject.toml
