[tool.poetry]
name = "package1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python 3.8.* or 3.9.* but not 3.8.0 and not 3.9.7
python = ">=3.8.1,<3.9.7 || >3.9.7,<3.10.0"

alembic = { version = "1.10.*", optional = true }

[tool.poetry.extras]
pgdb = ["alembic"]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
